admin/static/style.css
@font-face {
    font-family: "Iconic Stroke";
    src: url('fonts/iconic_stroke.eot') !important;
		src: url('fonts/iconic_stroke.svg#iconic') format('svg'), url('fonts/iconic_stroke.ttf') format('truetype');
}

.icon {
    /*position: relative;*/
    padding-right: 0.143em;
    font-family: "Iconic Stroke";
    color: #999;
    font-size: 2em;
    /*top: 0.143em;*/
}

a:hover .icon {
    color: #666;
    text-decoration: none;
}

body {
    line-height: 1.618em;
    font-size: 14px;
    font-family: 'Lucida Grande', 'Lucida Sans Unicode', verdana, geneva, sans-serif;
    color: #292626;
    margin: 0;
}

th {
    text-align: left;
}

#main {
    padding: 18px;
}

p {
    margin: 2em 0;
    padding: 0;
}
h1 {
    font-size: 1.236em;
    font-family: 'Helvetica Neue', 'Helvetica', Arial, FreeSans, sans-serif;
    background: #000;
    color: #999;
    height: 2em;
    line-height: 2em;
    margin: 0;
    padding: 0 0 0 .5em;
    position: relative;
    font-weight: normal;
}
h1 a {
    text-decoration: none;
}
h1 a:hover {
    color: #ccc;
}
h1 :link, h1 :visited, h1 strong {
    padding: .4em .5em;
}
h1 :link, h1 :visited {
    background: url(./path.gif) 100% 50% no-repeat;
    color: #bbb;
    cursor: pointer;
    padding-right: 2.2em;
}
h1 strong {
    color: #fff;
    font-weight: normal;
    padding-right: 25px;
}
h1 strong a {
    color:#fff !important;
    background:none !important;
}

h2 {
    margin: 18px 0;
}

.simplemodal-data h2 {
    margin-top: 0;
}

table.typelist,
table.viewlist {
    clear: left;
    border-collapse: collapse;
    border-spacing: 0;
    margin: 0 0 18px 0;
    line-height: 0;
    /* width: 100%; */
}

.typelist th,
.viewlist th {
    text-align: left;
    border-top: 1px solid #999;
    border-bottom: 1px solid #999;
}

.typelist th,
.viewlist th {
    padding: 0em 1em;
    line-height: 1.618em;
}

.typelist td.actions,
.viewlist td.actions {
    padding: 0.618em 1em 0 0.618em;
}


.typelist td,
.viewlist td {
    vertical-align: top;
    background-color: #fefefe;
    padding: 1em 0;
    margin: 0;
    border: 0;
}
.typelist tr.odd td,
.viewlist tr.odd td {
    background-color: #f9f9f9;
}

.typelist td.data,
.viewlist td.data {
    font-size: 0.9em;
    padding: 1.4em 1em 1.4em 0;
}

.typelist tr:hover td,
.viewlist tr:hover td {
    background-color: #eee;
}

.typelist td.data a,
.viewlist td.data a {
    display: block;
    width: 100%;
    height: 100%;
    background: none;
    color: black;
    text-decoration: none;
    padding: 0 1em;
}

th.actions,
td.actions {
    width: 210px;
    padding: 0;
    margin: 0;
    padding-left: 50px !important;
}

form.delete_form {
    display: inline;
    margin: 0;
    padding: 0;
}

.render-table th {
    text-align: left;
    padding-right: 20px;
    vertical-align: top;
}

.render-table td {
    vertical-align: top;
}

.render-table tbody.head th {
    color: #555;
    font-weight: bold;
    font-size: 1.1em;
    padding-top: 1.5em;
    border-bottom: solid 1px #888;
}

.description,
.hint {
    font-weight: normal;
    color: #666;
    font-size: 0.85em;
    margin-bottom: 1em;
}
p.description {
    margin-bottom: 2em;
}

.render-table ul.errors {
    margin: 0;
    padding: 0;
    font-size: 0.9em;
    font-weight: bold;
    list-style-type: none;
}

.render-table ul.errors li {
    padding: 0;
    margin: 0;
    color: #f88;
}

.button {
    text-decoration: none;
    color: #666;
    font-size: 0.8em;
    background: none;
    display: inline;
    cursor: pointer;
    margin: 0;
}

.button .label {
    position: relative;
    top: -0.286em;
    margin: 0;
    padding: 0;
    margin-bottom: -0.286em;
}

.button input {
    cursor: pointer;
    text-decoration: none;
    color: #666;
    background: none;
    display: inline;
    padding: 0;
    margin: 0;
    margin-left: -0.5em;
    border: 0;
}
.button input.icon {
    margin: 0;
    padding: 0;
    font-size: 2em;
    color: #999;
}

.button input.label {
    margin: 0;
    padding: 0;
    font-size: 11.2px;
    font-family: 'Lucida Grande', 'Lucida Sans Unicode', verdana, geneva, sans-serif;
}


.button:hover {
    color: #000;
}

.button:hover input {
    color: #000;
}
.button:hover input.icon {
    color: #666;
}

.top_actions {
    margin: 2px 0 12px 0;
}
.bottom_actions {
    margin: 12px 0;
}

.bottom_actions .button input.icon {
    margin-right: 0.236em;
}
.top_actions .button,
.bottom_actions .button {
    margin-right: 12px;
}

td.actions .button {
    margin-right: 18px;
}

.viewtype th {
    padding-right: 20px;
    vertical-align: top;
}

#flashmessages {
    list-style-type: none;
    padding: 0;
    margin: 0 0 1em 0;
}

#flashmessages li {
    padding: 0.5em 1em;
    background-color: #eee;
    border-radius: 3px;
}
#flashmessages li.error {
    background-color: #fdd;
}
#flashmessages li.success {
    background-color: #dfd;
}
#simplemodal-overlay {background-color:#000;}
#simplemodal-container {background-color:#fff; border:8px solid #444; padding:12px;}

#session {
    font-size: 0.95em;
    color: #ccc;
    position: absolute;
    top: 0;
    right: 0;
    z-index: 9999;
    height: 2em;
    line-height: 2em;
    margin: 0.2em 1em;
    padding: 0 0 0 .5em;
}

#session .username {
    color: white;
    margin-right: 1em;
}

#session ul.actions,
#session ul.actions li {
    list-style-type: none;
    display: inline;
    height: 2em;
    line-height: 2em;
    margin: 0;
    padding: 0;
}

#session ul.actions li a {
    color: #999;
    text-decoration: none;
}

#session ul.actions li a:hover {
    color: #eee;
}

#session ul.actions {
    border-left: 1px solid #666;
}

#session ul.actions li {
    padding: 0 0 0 1em;
}

.loggedout .logout { display: none !important; }
.loggedout .login { display: inline !important; }
.loggedout .signup { display: inline !important; }
.loggedin .logout { display: inline !important; }
.loggedin .login { display: none !important; }
.loggedin .signup { display: none !important; }

#login_form .actions,
#signup_form .actions {
    text-align: right;
}

#login_form label,
#signup_form label {
    display: inline-block;
    width: 90px;
}

#login_form .errors,
#signup_form .errors {
    font-size: 0.8em;
    color: red;
    padding-left: 90px;
}

#login_form .general_errors,
#signup_form .general_errors {
    font-size: 0.8em;
    color: red;
    font-weight: bold;
}

.spinner {
    display: inline;
    background: url("images/spinner-small.gif");
    background-repeat: no-repeat;
    background-position: center;
    line-height: 1em;
    padding: 1em;
}

.widget .selector select {
    min-width: 10em;
}

.right {
    float: right;
}

.left {
    float: left;
}

.layout {
    overflow: hidden;
}

.embedlist .item {
    clear: both;
}

.embedlist .actions {
    float: none;
    overflow: visible;
    padding-left: 0;
}

.embedlist .item .actions {
    float: right;
    overflow: hidden;
    padding-left: 1em;
}

.embedlist .embed {
    float: none;
    overflow: visible;
}

.embedlist .item .embed {
    float: left;
    overflow: hidden;
}

